[tool.poetry]
name = "japanese-llm-chatbot"
version = "0.1.0"
description = ""
authors = ["ayk24 <aykueym@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.0"
transformers = "^4.32.0"
streamlit = "^1.25.0"
streamlit-chat = "^0.1.1"
pyyaml = "^6.0.1"
sentencepiece = "^0.1.99"
accelerate = "^0.21.0"
ctranslate2 = "^3.18.0"
gdown = "^4.7.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
